# django_project

./: README.md  pyproject.toml
pette/: manage.py  requirements.txt
pette/pette/: asgi.py  settings.py  urls.py  wsgi.py
pette/users/: managers.py  models.py  views.py
pette/users/templates/: home.html
