[tool.poetry]
name = "pette"
version = "0.1.0"
description = ""
authors = ["hari <rlagkfla09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
django-allauth = "^0.61.1"
djangorestframework = "^3.15.1"
django-rest-auth = "^0.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
